# fast_api_practice

./: .gitignore  Makefile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
application/: alembic.ini  crud.py  main.py  pyproject.toml  pytest.ini  routers.py  validators.py
application/config/: config.py  environment.py
application/migrations/: env.py
application/migrations/versions/: 39377f5a67a1_.py
application/models/: base.py  book.py  customer.py
application/schemas/: customer.py
application/tests/: conftest.py
application/tests/config/: test_cors.py
application/tests/features/config/: cors.feature
containers/fastapi/: Dockerfile  entrypoint.sh
